kconfig/ingress/60-spring-demo-kube-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-demo-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: spring-demo-app.spring-demo.svc.cluster.local
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-demo-ingress
  namespace: ingress-nginx
  annotations:
    # nginx.ingress.kubernetes.io/http2-max-header-size: 32k
    # nginx.ingress.kubernetes.io/large-client-header-buffers: 4 16k
    # nginx.ingress.kubernetes.io/server-snippet: large_client_header_buffers 4 16k;
    nginx.ingress.kubernetes.io/server-snippet: |
      large_client_header_buffers 4 16k;

    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    # nginx.ingress.kubernetes.io/client-header-buffer-size: 1k
    # # nginx.ingress.kubernetes.io/http2-max-header-size: 96k
    # # nginx.ingress.kubernetes.io/large-client-header-buffers: 4 100k
    # nginx.ingress.kubernetes.io/load-balance: ewma
    # nginx.ingress.kubernetes.io/proxy-body-size: 150m
    # nginx.ingress.kubernetes.io/proxy-buffer-size: 96k
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    # nginx.ingress.kubernetes.io/server-snippet: | # this is where the magic happens
    #   client_header_buffer_size 1k;
    #   large_client_header_buffers 4 16k;
  # annotations:
  #   ingressClassName: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: spring-demo.kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-demo-external
            # namespace: spring-demo
            port:
              number: 8080
